# Synqora

./: .env.example  .gitignore  README.md  go.mod  migration_framework_architecture.md  package.json  synqora_agent_registration_trust_model.md  synqora_cloud_agent_job_protocol.md  synqora_cloud_control_plane_schema.md  synqora_saas_deployment_architecture.md
apps/: README.md
apps/agent/src/: cli.js  cloud-client.js  local-state.js
apps/api-go/: main.go  main_test.go
apps/cloud/src/: create-store.js  postgres-store.js  psql.js  server.js  shared.js  store.js
apps/cloud/test/: store.test.js
apps/engine-python/: pyproject.toml
apps/engine-python/synqora_engine/: __init__.py  datatype_rules.py
apps/engine-python/tests/: test_datatype_rules.py
apps/rules/test/: datatype-rules.test.js
apps/web-react/: index.html  package-lock.json  package.json  vite.config.ts
apps/web-react/src/: main.tsx  styles.css
db/: run-migrations.js  seed-demo.js
db/migrations/: 0001_synqora_core.sql  0002_user_auth_identity.sql
rules/: oracle_to_postgres_datatype_rules.md  oracle_to_postgres_datatypes.v1.json
ui-prototype/: README.md  app.js  index.html  styles.css
