[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synqora-engine"
version = "0.1.0"
description = "Synqora Oracle-to-PostgreSQL migration analysis and rules engine"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["synqora_engine*"]
